syntax = "proto3";

option java_multiple_files = true;
option java_package = "au.com.rma.test.customer";
//option java_outer_classname = "Customer";

package customer;

service CustomerService {
  rpc UpsertCustomer(Customer) returns (Customer) {}
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
  UNDEFINED_GENDER = 2;
}

enum ContactType {
  EMAIL = 0;
  HOME_PHONE = 1;
  MOBILE_PHONE = 2;
  UNDEFINED_CONTACT_TYPE = 3;
}

message Contact {
  ContactType type = 1;
  string text = 2;
}

enum AddressType {
  PHYSICAL = 0;
  POSTAL = 1;
  UNDEFINED_ADDRESS_TYPE = 2;
}

message Address {
  AddressType type = 1;
  string line1 = 2;
  string line2 = 3;
  string line3 = 4;
  string line4 = 5;
  string suburb = 6;
  string city = 7;
  string postcode = 8;
  string state = 9;
  string country_code = 10;
  int64 dpid = 11;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message Individual {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
  Gender gender = 4;
  Date dob = 5;
}

message Organisation {
  string name = 1;
  Individual contact = 2;
}

message Customer {
  uint64 id = 1;
  oneof customer_type {
    Individual individual = 2;
    Organisation organisation = 3;
  }
  repeated Contact contact = 4;
  repeated Address address = 5;
}